Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjObject.quorum
class Main
    action Main
        Object v
        Test(v)
    end

    action Test(Number var)
    end
end
